feat(#316): add Arguments class